🔨 Support building with local FUI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,5 +21,16 @@ set_target_properties(
 )
 target_include_directories(main PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
-find_package(fredemmott-gui CONFIG REQUIRED)
+set(fredemmott-gui_SOURCE_DIR "" CACHE PATH "Path to a local checkout of fredemmott-gui")
+if (fredemmott-gui_SOURCE_DIR)
+  set(ENABLE_IMPLICIT_BACKENDS OFF)
+  set(ENABLE_DIRECT2D ON)
+  add_subdirectory(
+    "${fredemmott-gui_SOURCE_DIR}"
+    "${CMAKE_BINARY_DIR}/third-party/fredemmott-gui"
+    EXCLUDE_FROM_ALL
+  )
+else ()
+  find_package(fredemmott-gui CONFIG REQUIRED)
+endif ()
 target_link_libraries(main PRIVATE fredemmott-gui::fredemmott-gui)
