💬 Rename, add version number to title bar

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,21 @@
+set(CONFIG_HPP "${CMAKE_CURRENT_BINARY_DIR}/include/config.hpp")
+block()
+  if (${CMAKE_PROJECT_VERSION_TWEAK})
+    set(PROJECT_READABLE_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}+${VERSION_TWEAK_PREFIX}${VERSION_TWEAK}")
+  else ()
+    set(PROJECT_READABLE_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}+local.0")
+  endif ()
+  configure_file(
+    "config.hpp.in"
+    "${CONFIG_HPP}"
+    @ONLY
+  )
+endblock()
+
 add_executable(
   main
   WIN32
+  "${CONFIG_HPP}"
   main.cpp
   Artifact.hpp
   Version.hpp
@@ -19,7 +34,7 @@ set_target_properties(
   PROPERTIES
   OUTPUT_NAME "OpenKneeboard-Removal-Tool"
 )
-target_include_directories(main PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_include_directories(main PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/include")
 
 set(fredemmott-gui_SOURCE_DIR "" CACHE PATH "Path to a local checkout of fredemmott-gui")
 if (fredemmott-gui_SOURCE_DIR)
