--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ endif ()
 
 include(cmake/hybrid-crt.cmake)
 
-project(OpenKneeboard-Removal-Tool VERSION 0.0.1 LANGUAGES CXX)
+set(VERSION_TWEAK 0 CACHE STRING "Final numeric component of version number")
+set(VERSION_TWEAK_PREFIX "" CACHE STRING "String prefix for final component of version number")
+project(OpenKneeboard-Removal-Tool VERSION 0.0.1.${VERSION_TWEAK} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
