🔨 generate version txt files
For consumption by e.g. CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,14 @@ set(VERSION_TWEAK 0 CACHE STRING "Final numeric component of version number")
 set(VERSION_TWEAK_PREFIX "" CACHE STRING "String prefix for final component of version number")
 project(OKB-Fresh-Start VERSION 0.0.1.${VERSION_TWEAK} LANGUAGES CXX)
 
+if (${CMAKE_PROJECT_VERSION_TWEAK})
+  set(PROJECT_READABLE_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}+${VERSION_TWEAK_PREFIX}${VERSION_TWEAK}")
+else ()
+  set(PROJECT_READABLE_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}+local.0")
+endif ()
+file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/version-semver.txt" "${PROJECT_READABLE_VERSION}")
+file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/version-quad.txt" "${CMAKE_PROJECT_VERSION}")
+
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
