🔨 Rename 'Debug' preset to 'Debug - MSVC'
CLion doesn't like having a preset named 'Debug' - conflicts with their defaults.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         preset:
-          - Debug
+          - Debug - MSVC
           - Debug - clang-cl
           - Release
     name: "${{matrix.preset}}"
