✨ Delete backups folder
can be owned by admin

fixes #4

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(
   Artifact.hpp
   Version.hpp
   Versions.hpp
+  artifacts/BackupsFolder.cpp
+  artifacts/BackupsFolder.hpp
   artifacts/BasicMSIArtifact.cpp
   artifacts/BasicMSIArtifact.hpp
   artifacts/DCSHooks.cpp
